2000-10-22  Kevin Ryde  <kevin@swox.se>

	* tune/gcd_bin.c: New file.
	* tune/gcd_finda_gen.c: New file.
	* tune/Makefile.am (libspeed_la_SOURCES): Add them.
	* tune/speed.[ch],common.c (mpn_gcd_binary, find_a): Add measuring.

	* * (__gmp_allocate_func etc): Rename from _mp_allocate_func etc.
	(__gmp_default_allocate etc): Rename from _mp_default_allocate etc.
	* gmp-impl.h (__GMP_REALLOCATE_FUNC_{TYPE,LIMBS}): New macros.

	* gmp-impl.h (DC_THRESHOLD): Establish default here, set to 3*KARA
	since that's the measured average.
	* mpn/generic/{dc_divrem_n.c,tdiv_qr.c} (DC_THRESHOLD): Remove default.
	
2000-10-21  Torbjorn Granlund  <tege@swox.com>

	* mpn/Makefile.am (TARG_DIST): Add ia64.

2000-10-21  Kevin Ryde  <kevin@swox.se>

	* *: Change BZ -> DC.
	* mpn/generic/dc_divrem_n.c: Renamed from bz_divrem_n.c.

	* doc/multiplication: Remove file, now in the manual.
	* doc/assembly_code: Ditto.
	* tune/README: Remove some parts now in the manual.

	* gmp.texi (@m etc): Add and use some new macros.
	(Integer Division - mpz_[cft]div_*): Merge descriptions, for brevity
	and to emphasise similarities.
	(Low-Level Functions - mpn_[lr]shift): Specify count as 1 to
	mp_bits_per_limb-1.
	(Algorithms): New chapter.
	(References): Add some papers.

	* mpn/generic/mul_n.c (mpn_toom3_mul_n, mpn_toom3_sqr_n): Remove some
	unused variables.
	* mpn/generic/mul_fft.c (mpn_fft_best_k): Ditto.

	* tune/freq.c: New file, split from time.c.
	* tune/time.c: Rewrite, now more automated.
	* configure.in, tune/*: Consequent changes.

2000-10-20  Torbjorn Granlund  <tege@swox.com>

	* mpn/ia64/default.m4: New file.
	* configure.in, config.m4 switch (ia64*-*-*): Use ia64/default.m4.

	* mpn/ia64/mul_1.asm: New file.
	* mpn/ia64/addmul_1.asm: New file.
	* mpn/ia64/add_n.asm: New file.
	* mpn/ia64/sub_n.asm: New file.
	* mpn/ia64/popcount.asm: New file.

	* mpn/alpha/cntlz.asm: Override `.set noat' from ASM_START.

	* configure.in (HAVE_TARGET_CPU_*): Support hppa1.0, hppa1.1, hppa2.0